# templatesAndStuff

./: LICENSE  LICENSE.md  README.md
CMake/setGitHash/: CMakeLists.txt  gitHash.cmake  githash.cpp.in  githash.h  main.cpp
